MDEV-5750 Assertion `ltime->year == 0' fails on a query with EXTRACT DAY_MINUTE and TIME column Item_func_min_max::get_date() did not clear ltime->year when returning a TIME value.